--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -764,6 +764,18 @@ a {
       -ms-flex-pack: end;
           justify-content: flex-end; }
 
+.page-about .entry-content > :not(header) {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px; }
+
+.page-about .entry-content {
+  margin-bottom: 3.75rem;
+  margin: 0; }
+
+.page-about .site-header {
+  position: absolute; }
+
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
